# ED7220C_SIMULATOR

./: README.md  interpreter.lua  interpreter2.lua  program.txt
coppelia_controller/: README.md  emitter.lua  gui.lua  interpreter.lua  main.lua  parser.lua  robot.lua  runtime.lua  switch.lua  tokenizer.lua
coppelia_plugin/: CMakeLists.txt  README.md  setup.ps1
coppelia_plugin/lua/: simLibserial-ce.lua  simLibserial.lua  simSerialPort-ce.lua  simSerialPort.lua
coppelia_plugin/sourceCode/: SerialPort.cpp  SerialPort.h  simLibserial.cpp  simLibserial.h
coppelia_plugin/sourceCode/include/: scriptFunctionData.cpp  scriptFunctionData.h  scriptFunctionDataItem.cpp  scriptFunctionDataItem.h  simConst-old.h  simConst.h  simExp.h  simLib-old.cpp  simLib-old.h  simLib.cpp  simLib.h  simTypes.h
libraries/: OneCore.Lib
lua_standalone/: README.md  interpreter.lua  parser.lua  serialport.lua  setup.ps1  switch.lua  tokenizer.lua
lua_standalone/serial/: CMakeLists.txt  SerialPort.cpp  SerialPort.h  libserial.cpp
test/: auto.txt  points.txt  snippets.txt  test_standalone.lua
